--- a/index.html
+++ b/index.html
@@ -437,8 +437,70 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+        <p class="footer-text-soc madal-title">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="madal-form">
+          <div class="modal-filed">
+            <label for="input-name" class="input-text">Name</label>
+            <div class="icon-absolut">
+              <input
+                class="modal-input"
+                type="text"
+                name="input-name"
+                id="input-name"
+              />
+              <svg class="svg-input-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-filed">
+            <label for="input-phone" class="input-text">Phone</label>
+            <div class="icon-absolut">
+              <input
+                class="modal-input"
+                type="tel"
+                name="input-phone"
+                id="input-phone"
+              />
+              <svg class="svg-input-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-filed">
+            <label for="input-email" class="input-text">Email</label>
+            <div class="icon-absolut">
+              <input
+                class="modal-input"
+                type="email"
+                name="input-email"
+                id="input-email"
+              />
+              <svg class="svg-input-icon" width="18" height="18">
+                <use href="./images/symbol-defs.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <label for="more-text" class="input-text">Comment</label>
+          <textarea
+            id="more-text"
+            class="more-text"
+            name="more-text"
+            placeholder="Text input"
+          ></textarea>
+          <input type="checkbox" id="modal-check" class="modal-checkbox" />
+          <label for="modal-check" class="modal-check"
+            >I accept the terms and conditions of the
+            <a href="" class="modal-check privacy-polisi"
+              >Privacy Policy</a
+            ></label
+          >
+        </form>
       </div>
     </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
