--- a/index.html
+++ b/index.html
@@ -442,15 +442,15 @@
         </p>
         <form class="madal-form">
           <div class="modal-filed">
-            <label for="input-name" class="input-text">Name</label>
+            <label for="user-name" class="input-text">Name</label>
             <div class="icon-absolut">
               <input
                 class="modal-input"
                 type="text"
                 name="input-name"
-                id="input-name"
+                id="user-name"
               />
-              <svg class="svg-input-icon" width="18" height="18">
+              <svg class="svg-input-icon" width="18" height="24">
                 <use href="./images/symbol-defs.svg#icon-person"></use>
               </svg>
             </div>
@@ -464,34 +464,39 @@
                 name="input-phone"
                 id="input-phone"
               />
-              <svg class="svg-input-icon" width="18" height="18">
+              <svg class="svg-input-icon" width="18" height="24">
                 <use href="./images/symbol-defs.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="modal-filed">
-            <label for="input-email" class="input-text">Email</label>
+            <label for="user- " class="input-text">Email</label>
             <div class="icon-absolut">
               <input
                 class="modal-input"
                 type="email"
-                name="input-email"
-                id="input-email"
+                name="user-email"
+                id="user-email"
               />
-              <svg class="svg-input-icon" width="18" height="18">
+              <svg class="svg-input-icon" width="18" height="24">
                 <use href="./images/symbol-defs.svg#icon-email"></use>
               </svg>
             </div>
           </div>
-          <label for="more-text" class="input-text">Comment</label>
+          <label for="user-comment" class="input-text">Comment</label>
           <textarea
-            id="more-text"
+            id="user-comment"
             class="more-text"
-            name="more-text"
+            name="user-comment"
             placeholder="Text input"
           ></textarea>
-          <input type="checkbox" id="modal-check" class="modal-checkbox" />
-          <label for="modal-check" class="modal-check"
+          <input
+            type="checkbox"
+            id="user-privacy"
+            name="user-privacy"
+            class="modal-checkbox"
+          />
+          <label for="user-privacy" class="modal-check"
             >I accept the terms and conditions of the
             <a href="" class="modal-check privacy-polisi"
               >Privacy Policy</a
