--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@
               <a href="" class="modal-check privacy-polisi">Privacy Policy</a>
             </label>
           </div>
+          <div class="madal-sent">
+            <button type="submit" class="madal-sent-btn">Send</button>
+          </div>
         </form>
       </div>
     </div>
