--- a/portfolio.html
+++ b/portfolio.html
@@ -330,6 +330,21 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label for="subscribe-email" class="subscribe-email"></label>
+            <input
+              type="email"
+              id="subscribe-email"
+              class="subscribe-iput"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="footer-subscribe-btn">
+              Subscribe
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <script src="./js/modal.js"></script>
