--- a/portfolio.html
+++ b/portfolio.html
@@ -334,13 +334,15 @@
         <div class="footer-subscribe">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-subscribe-form">
-            <label for="subscribe-email" class="subscribe-email"></label>
-            <input
-              type="email"
-              id="subscribe-email"
-              class="subscribe-iput"
-              placeholder="E-mail"
-            />
+            <label for="subscribe-email" class="subscribe-email">
+              <input
+                name="subscribe-email"
+                type="email"
+                id="subscribe-email"
+                class="subscribe-iput"
+                placeholder="E-mail"
+              />
+            </label>
             <button type="submit" class="footer-subscribe-btn">
               Subscribe
             </button>
