--- a/portfolio.html
+++ b/portfolio.html
@@ -345,6 +345,9 @@
             </label>
             <button type="submit" class="footer-subscribe-btn">
               Subscribe
+              <svg class="svg-footer-btn" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
             </button>
           </form>
         </div>
