--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
+
         <div class="footer-list-link">
           <p class="footer-text-soc">Social media</p>
           <ul class="list footer-list">
@@ -427,6 +428,26 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+            <label for="subscribe-email" class="subscribe-email">
+              <input
+                name="subscribe-email"
+                type="email"
+                id="subscribe-email"
+                class="subscribe-iput"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="footer-subscribe-btn">
+              Subscribe
+              <svg class="svg-footer-btn" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
