--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 id="user-name"
               />
               <svg class="svg-input-icon" width="18" height="24">
-                <use href="./images/symbol-defs.svg#icon-person"></use>
+                <use href="./images/icons.svg#icon-V1"></use>
               </svg>
             </div>
           </div>
@@ -486,7 +486,7 @@
                 id="user-phone"
               />
               <svg class="svg-input-icon" width="18" height="24">
-                <use href="./images/symbol-defs.svg#icon-phone"></use>
+                <use href="./images/icons.svg#icon-V2"></use>
               </svg>
             </div>
           </div>
@@ -500,7 +500,7 @@
                 id="user-email"
               />
               <svg class="svg-input-icon" width="18" height="24">
-                <use href="./images/symbol-defs.svg#icon-email"></use>
+                <use href="./images/icons.svg#icon-V3"></use>
               </svg>
             </div>
           </div>
@@ -532,7 +532,9 @@
               <a href="" class="modal-check privacy-polisi">Privacy Policy</a>
             </label>
           </div>
-          <button type="submit" class="madal-sent-btn">Send</button>
+          <div class="madal-sent">
+            <button type="submit" class="madal-sent-btn">Send</button>
+          </div>
         </form>
       </div>
     </div>
